# EverCraftKata

./: CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/character/: CMakeLists.txt
libraries/character/include/: Character.h  character.h
libraries/character/src/: Character.cpp
libraries/character/tests/: CMakeLists.txt  CharacterTest.cpp
